<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".controllers.resControllers.activities.BasketViewer">

    <item
        android:id="@+id/MenuClearBasket"
        android:orderInCategory="1"
        android:title="@string/ClearBasketTitle"
        app:showAsAction="ifRoom"/>
</menu>