<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/SparePartsViewerExternalVerticalMargin"
        android:layout_marginTop="@dimen/SparePartsViewerExternalVerticalMargin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NumberLabel"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/changeBasketSparePart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QuantityLabel"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/changeBasketQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantityHint"
                android:numeric="decimal"
                android:selectAllOnFocus="true"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>