<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/DialogSimpleSearchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SimpleSearchText"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/SimpleSearchDialogTextSize"/>
</LinearLayout>